--- a/AnalyseTool.Launcher/AnalyseTool.Launcher.csproj
+++ b/AnalyseTool.Launcher/AnalyseTool.Launcher.csproj
@@ -1,9 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+      <UseWPF>true</UseWPF>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<PlatformTarget>x64</PlatformTarget>
+    <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
 	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
 	<Configurations>Debug R25;Debug R26</Configurations>
@@ -54,7 +56,7 @@
 		<Name>RevitAddIn</Name>
 		<Assembly>AnalyseTool/AnalyseTool.Launcher.dll</Assembly>
 		<AddInId>8F8F151B-8E8A-492A-B68C-736B9C385BFE</AddInId>
-		<FullClassName>AnalyseTool.App</FullClassName>
+		<FullClassName>AnalyseTool.Launcher.App</FullClassName>
 		<VendorId>DavydovDevelopment</VendorId>
 		<VendorDescription>Nikolai Davydov</VendorDescription>
 		<VendorEmail>nikolai.davydov@outlook.de</VendorEmail>
@@ -79,7 +81,7 @@
     </Target>
 
     
-    <Target Name="CopyToRevitFolder" AfterTargets="Publish;Build" >
+    <Target Name="CopyToRevitFolder" AfterTargets="Publish;Build">
 		<ItemGroup>
 			<FilesToCopy Include="$(Path)\**\*.*" />
 		</ItemGroup>
